--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ select {
 }
 .display-section-cover {
   min-height: 588px;
-  padding: 16px 16px 60px 16px;
+  padding: 16px 16px 90px 16px;
   width: 100%;
   min-height: 100%;
   position: relative;
